# BMAuth

./: .gitignore  AGENTS.md  PYPI_DESCRIPTION.md  README.md  __init__.py  cli.py  config.py  database.py  main.py  pyproject.toml  requirements.txt  setup.py
api/: __init__.py
api/v1/: router.py
api/v1/endpoints/: auth.py  users.py  webauthn.py
bmauth/: __init__.py  auth.py  dev_tunnel.py
bmauth/storage/: __init__.py  base.py  memory.py  supabase.py
bmauth/templates/: join_device.html  login.html  register.html
cache/: __init__.py  backends.py  decorators.py  manager.py  performance.py
config/: __init__.py  scaling.py
core/: __init__.py  auth.py  config.py  middleware.py
dashboard/: __init__.py  analytics.py  api.py  websocket.py
database/: __init__.py  partitioning.py
models/: __init__.py  security_log.py  user.py  webauthn_challenge.py  webauthn_credential.py
schemas/: __init__.py  auth.py  user.py  webauthn.py
security/: __init__.py  auth.py
services/: __init__.py  user_service.py  webauthn_service.py
tasks/: __init__.py  scheduler.py
tests/: __init__.py  test_app.py
